--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: https://savemaro.org # the base hostname & protocol for your site, e.g. http://example.com
 baseurl:  # the subpath of your site, e.g. /blog
-title:
+title: Announcement
 logo: 
 description: 
 
